Closed Bug 1552751 Opened 5 years ago Closed 5 years ago

MessagePort should not work, silently failing, when created from removed windows.

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: baku, Assigned: baku)

References

Details

Attachments

(2 files, 2 obsolete files)

A script like this doesn't create active MessagePorts, but it should:

let ifr = document.createElement('iframe');
...

let w = ifr.contentWindow;
ifr.remove();

let mc = new w.MessageChannel();
Priority: -- → P2
Attachment #9065966 - Attachment is obsolete: true
Attachment #9066942 - Attachment is obsolete: true
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3b4d36cfde13
MessagePort should not work when created from a disconnected window - tests, r=smaug
https://hg.mozilla.org/integration/autoland/rev/4ff05bda88b2
MessagePort should not work when created from a disconnected window, r=smaug
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

the title of this bug should be changed, I think

Summary: MessagePort should work even when created from removed windows. → MessagePort should not work, silently failing, when created from removed windows.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: