Bug 1552751 - MessagePort should not work when created from a disconnected window, r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D32265

--HG--
extra : moz-landing-system : lando